Refs #8827; removed content padding from multimedia page and realigned padding for globalnav to prevent items from spilling over

--- a/trunk/eea.mediacentre/trunk/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/trunk/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -26,6 +26,11 @@
     display:none;
 }
 
+
+#portal-column-content {
+    padding: 0;
+}
+
 #content {
     margin:0 !important;
     padding: 0 !important;
@@ -646,7 +651,7 @@ h1#parent-fieldname-title {
     -ms-filter: "none";
  }
 #portal-globalnav li a {
-    padding: 2em 1em 1em 0em;
+    padding: 2em 0.5em 1em 0.5em;
 }
 #portal-colophon {
     margin: 1.5em 0em 0em 0em !important;
